tests/symbol/symbol.exp
Error ------------------------------------------------------------------------------------------ class_iterator.js:39:31

Cannot assign `new BadIterable()` to `bad` because in property `@@iterator` > the return value > type argument
`Yield` [1]: string [2] is incompatible with number [3]. [incompatible-type]

   class_iterator.js:39:31
     39| const bad: Iterable<number> = new BadIterable(); // Error: string vs number
                                       ^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:1880:30
   1880| interface $IteratorProtocol<+Yield,+Return=void,-Next=void> {
                                      ^^^^^ [1]
   class_iterator.js:35:34
     35|   *[Symbol.iterator](): Iterator<string> {
                                          ^^^^^^ [2]
   class_iterator.js:39:21
     39| const bad: Iterable<number> = new BadIterable(); // Error: string vs number
                             ^^^^^^ [3]


Error -------------------------------------------------------------------------------------------------- iterator.js:6:1

Cannot cast `foo[Symbol.iterator]` to boolean because `Iterator` [1] is incompatible with boolean [2].
[incompatible-type]

   iterator.js:6:1
   6| foo[Symbol.iterator] as boolean; // Error
      ^^^^^^^^^^^^^^^^^^^^

References:
   iterator.js:2:15
   2|   @@iterator: Iterator<number>,
                    ^^^^^^^^^^^^^^^^ [1]
   iterator.js:6:25
   6| foo[Symbol.iterator] as boolean; // Error
                              ^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- symbol.js:8:17

Cannot call `Symbol` because no more than 1 argument is expected by function type [1]. [extra-arg]

   symbol.js:8:17
     8|   Symbol('foo', 'bar'); // Error: unused argument
                        ^^^^^

References:
   <BUILTINS>/core.js:281:10
   281|   static (value?: mixed): symbol;
                 ^^^^^^^^^^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------------------- symbol.js:23:5

Cannot cast `x` to boolean because symbol [1] is incompatible with boolean [2]. [incompatible-type]

   symbol.js:23:5
   23|     x as boolean; // Error
           ^

References:
   symbol.js:20:12
   20|   const x: symbol | boolean = true;
                  ^^^^^^ [1]
   symbol.js:23:10
   23|     x as boolean; // Error
                ^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- symbol.js:26:5

Cannot cast `x` to symbol because boolean [1] is incompatible with symbol [2]. [incompatible-type]

   symbol.js:26:5
   26|     x as symbol; // Error
           ^

References:
   symbol.js:20:21
   20|   const x: symbol | boolean = true;
                           ^^^^^^^ [1]
   symbol.js:26:10
   26|     x as symbol; // Error
                ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- symbol.js:45:27

Cannot assign `Symbol.toPrimitive` to `y` because `$SymbolToPrimitive` [1] is incompatible with `$SymbolMatch` [2].
[incompatible-type]

   symbol.js:45:27
    45|   const y: $SymbolMatch = Symbol.toPrimitive; // Error
                                  ^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:353:24
   353|   static +toPrimitive: $SymbolToPrimitive;
                               ^^^^^^^^^^^^^^^^^^ [1]
   symbol.js:45:12
    45|   const y: $SymbolMatch = Symbol.toPrimitive; // Error
                   ^^^^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- symbol.js:62:3

Cannot compare tuple type [1] to symbol [2] with a non-strict equality check. Make sure the arguments are valid, or try
using strict equality (`===` or `!==`) instead. [invalid-compare]

   symbol.js:62:3
   62|   x == s; // Error
         ^

References:
   symbol.js:61:12
   61|   const x: [] = [];
                  ^^ [1]
   symbol.js:59:12
   59|   const s: symbol = Symbol();
                  ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- symbol.js:63:3

Cannot compare symbol [1] to tuple type [2] with a non-strict equality check. Make sure the arguments are valid, or try
using strict equality (`===` or `!==`) instead. [invalid-compare]

   symbol.js:63:3
   63|   s == x; // Error
         ^

References:
   symbol.js:59:12
   59|   const s: symbol = Symbol();
                  ^^^^^^ [1]
   symbol.js:61:12
   61|   const x: [] = [];
                  ^^ [2]


Error --------------------------------------------------------------------------------------------------- symbol.js:64:3

Cannot compare tuple type [1] to symbol [2] with a non-strict equality check. Make sure the arguments are valid, or try
using strict equality (`===` or `!==`) instead. [invalid-compare]

   symbol.js:64:3
   64|   x != s; // Error
         ^

References:
   symbol.js:61:12
   61|   const x: [] = [];
                  ^^ [1]
   symbol.js:59:12
   59|   const s: symbol = Symbol();
                  ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- symbol.js:65:3

Cannot compare symbol [1] to tuple type [2] with a non-strict equality check. Make sure the arguments are valid, or try
using strict equality (`===` or `!==`) instead. [invalid-compare]

   symbol.js:65:3
   65|   s != x; // Error
         ^

References:
   symbol.js:59:12
   59|   const s: symbol = Symbol();
                  ^^^^^^ [1]
   symbol.js:61:12
   61|   const x: [] = [];
                  ^^ [2]


Error ----------------------------------------------------------------------------------- type_well_known_symbol.js:18:1

Cannot cast `bad` to `Iterable` because in property `@@iterator` > the return value > type argument `Yield` [1]:
string [2] is incompatible with number [3]. [incompatible-type]

   type_well_known_symbol.js:18:1
     18| bad as Iterable<number>; // ERROR
         ^^^

References:
   <BUILTINS>/core.js:1880:30
   1880| interface $IteratorProtocol<+Yield,+Return=void,-Next=void> {
                                      ^^^^^ [1]
   type_well_known_symbol.js:16:44
     16| type Bad = { [Symbol.iterator](): Iterator<string> };
                                                    ^^^^^^ [2]
   type_well_known_symbol.js:18:17
     18| bad as Iterable<number>; // ERROR
                         ^^^^^^ [3]


Error ----------------------------------------------------------------------------------- type_well_known_symbol.js:31:1

Cannot cast `new DStaticIterable()` to `Iterable` because property `@@iterator` is missing in `DStaticIterable` [1] but
exists in `$Iterable` [2]. [incompatible-type]

   type_well_known_symbol.js:31:1
   31| new DStaticIterable() as Iterable<number>; // ERROR: no instance @@iterator
       ^^^^^^^^^^^^^^^^^^^^^ [1]

References:
   type_well_known_symbol.js:31:26
   31| new DStaticIterable() as Iterable<number>; // ERROR: no instance @@iterator
                                ^^^^^^^^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------- type_well_known_symbol.js:37:21

Unsupported key in object type. Only identifier, string literal, and number literal keys are allowed. [illegal-key]

   37| type BadSymbol1 = { [Symbol.xxx](): string }; // ERROR: unsupported key
                           ^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------- type_well_known_symbol.js:37:29

Cannot get `Symbol.xxx` because property `xxx` is missing in statics of `Symbol` [1]. [prop-missing]

   type_well_known_symbol.js:37:29
    37| type BadSymbol1 = { [Symbol.xxx](): string }; // ERROR: unsupported key
                                    ^^^

References:
   <BUILTINS>/core.js:276:15
   276| declare class Symbol {
                      ^^^^^^ [1]


Error ---------------------------------------------------------------------------------- type_well_known_symbol.js:38:21

Unsupported key in object type. Only identifier, string literal, and number literal keys are allowed. [illegal-key]

   38| type BadSymbol2 = { [Symbol.xxx](x: mixed): boolean }; // ERROR: unsupported key
                           ^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------- type_well_known_symbol.js:38:29

Cannot get `Symbol.xxx` because property `xxx` is missing in statics of `Symbol` [1]. [prop-missing]

   type_well_known_symbol.js:38:29
    38| type BadSymbol2 = { [Symbol.xxx](x: mixed): boolean }; // ERROR: unsupported key
                                    ^^^

References:
   <BUILTINS>/core.js:276:15
   276| declare class Symbol {
                      ^^^^^^ [1]


Error ---------------------------------------------------------------------------------- type_well_known_symbol.js:40:24

Illegal name. [unsupported-syntax]

   40| interface IBadSymbol { [Symbol.xxx](): string } // ERROR: unsupported key
                              ^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------- type_well_known_symbol.js:40:32

Cannot get `Symbol.xxx` because property `xxx` is missing in statics of `Symbol` [1]. [prop-missing]

   type_well_known_symbol.js:40:32
    40| interface IBadSymbol { [Symbol.xxx](): string } // ERROR: unsupported key
                                       ^^^

References:
   <BUILTINS>/core.js:276:15
   276| declare class Symbol {
                      ^^^^^^ [1]


Error ---------------------------------------------------------------------------------- type_well_known_symbol.js:41:28

Illegal name. [unsupported-syntax]

   41| declare class DBadSymbol { [Symbol.xxx](): string } // ERROR: unsupported key
                                  ^^^^^^^^^^^^


Error ---------------------------------------------------------------------------------- type_well_known_symbol.js:41:36

Cannot get `Symbol.xxx` because property `xxx` is missing in statics of `Symbol` [1]. [prop-missing]

   type_well_known_symbol.js:41:36
    41| declare class DBadSymbol { [Symbol.xxx](): string } // ERROR: unsupported key
                                           ^^^

References:
   <BUILTINS>/core.js:276:15
   276| declare class Symbol {
                      ^^^^^^ [1]



Found 20 errors
